# pulse

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml
.github/workflows/: ci.yml  release.yml
config/: pulse.toml
migrations/: 0001_initial.sql
packaging/: pulse.service
scripts/: install.sh  test-install.sh
src/: collector.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  web.rs
templates/: index.html
web/: app.js  style.css
