[package]
name = "pulse"
version = "0.1.2"
edition = "2024"
description = "Lightweight Docker container metrics collector and dashboard"
license = "MIT"

[dependencies]
anyhow = "1"
askama = "0.14"
axum = "0.8"
bollard = "0.19"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
futures-util = "0.3"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["compression-gzip", "request-id", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
strip = true
